2015-09-18 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Make sure that setup_afs actually picks up python
	* Better debugging in prepareHistos()

2015-09-10 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
        * adding possibility to display impact of systematics before fit - code proposals by Luigi
        M       scripts/HistFitter.py
        M       src/Utils.cxx
        M       src/Utils.h

2015-09-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Patch to TMsgLogger.cxx to work on OS X
	* Patch to Makefile.arch to detect ROOT versions
	* Patch to Makefile to use rootcint or rootcling, depending on the version
	* Improvements to several files to make explicit what cout/endl/ostream are used to prevent compilation errors
	* Fix a double->int conversion warning in ValidationUtils.cxx
	* NOTE: ROOT5 compatibility is not guaranteed. This version still works, future versions might break.

2015-07-02 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M       macros/Examples/contourplot/contourmacros/CombinationGlob.C
        M       macros/Examples/contourplot/contourmacros/SUSY_m0_vs_m12_all_withBand_cls.C
        M       macros/Examples/contourplot/contourmacros/m0_vs_m12_nofloat.C
        M       macros/Examples/contourplot/makecontourplots.C
        M       macros/Examples/contourplot/makelistfiles.C
        M       macros/Examples/p-values/pvalue.C
        M       python/prepareHistos.py
        M       setup.sh
        M       setup_afs.sh
        M       src/LinkDef.h
        M       src/Makefile
        M       src/Makefile.arch
        M       src/RooHist.h
        M       src/RooPlot.h
        M       src/TEasyFormula.cxx
        * switching to Root 6.04


2015-07-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
        * List files now outputted in JSON by default
        * Intermediate plain-text list file still needed to run makeContourHists.C
        * Added src/json.cxx, src/json.h
        * Added method to LimitResult.cxx